implementado modo de operacion

--- a/.env.sample
+++ b/.env.sample
@@ -7,3 +7,4 @@ SENTRY_URL="https://123456789.ingest.sentry.io/1235468"
 HTTPS_PRIVATEKEY_PATH="/path/to/file/privatekey.pem"
 HTTPS_FULLCHAIN_PATH="/path/to/file/fullchain.pem"
 GOOGLE_ANALITYCS_ID="UA-#########-#"
+MODE="full"
