implementacion de redis

--- a/.env.sample
+++ b/.env.sample
@@ -8,3 +8,4 @@ HTTPS_PRIVATEKEY_PATH="/path/to/file/privatekey.pem"
 HTTPS_FULLCHAIN_PATH="/path/to/file/fullchain.pem"
 GOOGLE_ANALITYCS_ID="UA-#########-#"
 MODE="full"
+REDIS_URL="redis://user:password@redis.domain:port"
