--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "pm2": "sudo pm2 start index.js"
+    "pm2": "sudo pm2 start index.js",
+    "dashboard": "sh dashboard.sh"
   },
   "author": "lui2mi",
   "license": "ISC",
