ajuste de ip en masterkey

--- a/.env.sample
+++ b/.env.sample
@@ -9,3 +9,4 @@ HTTPS_FULLCHAIN_PATH="/path/to/file/fullchain.pem"
 GOOGLE_ANALITYCS_ID="UA-#########-#"
 MODE="full"
 REDIS_URL="redis://user:password@redis.domain:port"
+MASTER_KEY_IP="127.0.0.1"
