mejora al job de carga de datos

--- a/.env.sample
+++ b/.env.sample
@@ -10,3 +10,4 @@ GOOGLE_ANALITYCS_ID="UA-#########-#"
 MODE="full"
 REDIS_URL="redis://user:password@redis.domain:port"
 MASTER_KEY_IP="::1"
+NAME="Local"
