--- a/.env.sample
+++ b/.env.sample
@@ -7,8 +7,8 @@ SENTRY_URL="https://123456789.ingest.sentry.io/1235468"
 HTTPS_PRIVATEKEY_PATH="/path/to/file/privatekey.pem"
 HTTPS_FULLCHAIN_PATH="/path/to/file/fullchain.pem"
 GOOGLE_ANALITYCS_ID="UA-#########-#"
-MODE="full"
 REDIS_URL="redis://user:password@redis.domain:port"
 MASTER_KEY_IP="::1"
 NAME="Local"
 SCHEDULE="0 0 5 * * *"
+CITIES="*"
