--- a/.env.sample
+++ b/.env.sample
@@ -1,6 +1,7 @@
 DATABASE_URL=""
 APP_ID="abcdefghijklmnopqrstuvwxyz"
 MASTER_KEY="abcdefghijklmnopqrstuvwxyz"
+REST_KEY="abcdefghijklmnopqrstuvwxyz"
 SERVER_URL="http://localhost:1337/parse"
 PORT="1337"
 SENTRY_URL="https://123456789.ingest.sentry.io/1235468"
