--- a/.env.sample
+++ b/.env.sample
@@ -12,3 +12,6 @@ MASTER_KEY_IP="::1"
 NAME="Local"
 SCHEDULE="0 0 5 * * *"
 CITIES="*"
+CLOUDINARY_NAME="name"
+CLOUDINARY_API_KEY="1234567890"
+CLOUDINARY_API_SECRET="abcde-abcde"
