--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "@sentry/node": "^7.53.1",
+    "cloudinary": "^2.0.1",
     "dotenv": "^16.0.3",
     "express": "^4.17.1",
     "jsts": "2.7.1",
