--- a/.env.sample
+++ b/.env.sample
@@ -6,7 +6,6 @@ PORT="1337"
 SENTRY_URL="https://123456789.ingest.sentry.io/1235468"
 HTTPS_PRIVATEKEY_PATH="/path/to/file/privatekey.pem"
 HTTPS_FULLCHAIN_PATH="/path/to/file/fullchain.pem"
-GOOGLE_ANALITYCS_ID="UA-#########-#"
 REDIS_URL="redis://user:password@redis.domain:port"
 MASTER_KEY_IP="::1"
 NAME="Local"
@@ -15,3 +14,6 @@ CITIES="*"
 CLOUDINARY_NAME="name"
 CLOUDINARY_API_KEY="1234567890"
 CLOUDINARY_API_SECRET="abcde-abcde"
+ANALYTICS_URL="https://server.webhook"
+ANALYTICS_APPID="abcdefghijklmnopqrstuvwxyz"
+ANALYTICS_RESTID="abcdefghijklmnopqrstuvwxyz"
