--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.0.3",
     "ejs": "^3.1.10",
     "express": "^4.17.1",
+    "moment": "^2.30.1",
     "node-schedule": "^2.1.1",
     "nodemailer": "^7.0.9",
     "object-hash": "^3.0.0",
